[metadata]
name = merlin-dataloader
version = 0.0.1
author = NVIDIA Corporation
description = Merlin Dataloader
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NVIDIA-Merlin/dataloader
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering

[options]
# package_dir =
# = src
packages = find:
python_requires = >=3.6

[options.packages.find]
# where = src

[flake8]
max-line-length = 100
ignore = E203,W503
exclude = build,.eggs

[flake8_nb]
max-line-length = 120
ignore = E203,E402,W503

[versioneer]
VCS = git
style = pep440
versionfile_source = merlin/loader/_version.py
versionfile_build = merlin/loader/_version.py
tag_prefix = v
parentdir_prefix = merlin-loader-

[mypy]
ignore_missing_imports = True
no_implicit_optional = True

[codespell]
skip = .*pb2.py,./.git,./.github,./bench,./dist,./docs/build,.*egg-info.*,versioneer.py,*.csv,*.parquet,./.mypy_cache
ignore-words = ./ci/ignore_codespell_words.txt
count =
quiet-level = 3